# lab06

./: .travis.yml  README.md
hello_world_application/: CMakeLists.txt  hello_world-0.1.1-Source.tar.xz
hello_world_application/_CPack_Packages/Linux-Source/TXZ/hello_world-0.1.1-Source/_CPack_Packages/Linux-Source/TBZ2/hello_world-0.1.1-Source/: CMakeLists.txt  Makefile
hello_world_application/_CPack_Packages/Linux-Source/TXZ/hello_world-0.1.1-Source/_CPack_Packages/Linux-Source/TBZ2/hello_world-0.1.1-Source/formatter_ex_lib/formatter_lib/: Makefile
hello_world_application/_CPack_Packages/Linux-Source/TXZ/hello_world-0.1.1-Source/_CPack_Packages/Linux-Source/TBZ2/hello_world-0.1.1-Source/formatter_ex_lib/tmp/formatter_lib/: cmake_install.cmake
hello_world_application/_CPack_Packages/Linux-Source/TZ/hello_world-0.1.1-Source/: CMakeCache.txt  CPackConfig.cmake
hello_world_application/formatter_ex_lib/formatter_lib/tmp/: Makefile
solver_application/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  equation.cpp  solver-0.1.1-Linux.rpm
solver_application/_CPack_Packages/Linux-Source/TGZ/solver-0.1.1-Source/_CPack_Packages/Linux-Source/TBZ2/solver-0.1.1-Source/: CMakeLists.txt  Makefile
solver_application/_CPack_Packages/Linux-Source/TGZ/solver-0.1.1-Source/formatter_ex_lib/: cmake_install.cmake
solver_application/_CPack_Packages/Linux-Source/TXZ/: solver-0.1.1-Source.tar.xz
solver_application/_CPack_Packages/Linux-Source/TXZ/solver-0.1.1-Source/: CMakeCache.txt
solver_application/_CPack_Packages/Linux-Source/TXZ/solver-0.1.1-Source/solver_lib/: solver.cpp
solver_application/_CPack_Packages/Linux-Source/TZ/solver-0.1.1-Source/formatter_ex_lib/: CMakeLists.txt  (+1 more)
solver_application/formatter_ex_lib/: .CMakeLists.txt.swp
solver_application/solver_lib/: CMakeLists.txt
(+23 files in other folders)
