cmake_minimum_required(VERSION 3.4)
project(solver)
add_executable(solver equation.cpp)
include_directories(formatter_ex_lib)
add_subdirectory(formatter_ex_lib)
include_directories(solver_lib)
add_subdirectory(solver_lib)
target_link_libraries(solver formatter_ex)
target_link_libraries(solver solver_lib)
install(TARGETS solver DESTINATION bin)
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VENDOR "MyCompany")
set(CPACK_PACKAGE_CONTACT "https://myprojectsite.org")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "supsun-sockol@yandex.ru")
set(CPACK_PACKAGE_DESCRIPTION "The most stupid program ever written")
#set(CPACK_GENERATOR "DragNDrop")
set(CPACK_GENERATOR "DEB")
#et(CPACK_GENERATOR "RPM")
include(CPack)
